--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
